# serializer version: 1
# name: test_detector[IncorrectSolc-0.7.6-dynamic_1.sol]
  list([
    list([
      dict({
        'check': 'solc-version',
        'confidence': 'High',
        'description': '''
          Pragma version^0.7.4 (tests/detectors/solc-version/0.7.6/dynamic_1.sol#1) allows old versions
  
        ''',
        'elements': list([
          dict({
            'name': '^0.7.4',
            'source_mapping': dict({
              'ending_column': 24,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/solc-version/0.7.6/dynamic_1.sol',
              'filename_short': 'tests/detectors/solc-version/0.7.6/dynamic_1.sol',
              'is_dependency': False,
              'length': 23,
              'lines': list([
                1,
              ]),
              'start': 0,
              'starting_column': 1,
            }),
            'type': 'pragma',
            'type_specific_fields': dict({
              'directive': list([
                'solidity',
                '^',
                '0.7',
                '.4',
              ]),
            }),
          }),
        ]),
        'first_markdown_element': 'tests/detectors/solc-version/0.7.6/dynamic_1.sol#L1',
        'id': 'e46d6be1a19a445ff20b2e96a37cb7355cf88d3c93d72bfc963db2a86f303d11',
        'impact': 'Informational',
        'markdown': '''
          Pragma version[^0.7.4](tests/detectors/solc-version/0.7.6/dynamic_1.sol#L1) allows old versions
  
        ''',
      }),
    ]),
  ])
# ---
# name: test_detector[IncorrectSolc-0.7.6-dynamic_2.sol]
  list([
    list([
      dict({
        'check': 'solc-version',
        'confidence': 'High',
        'description': '''
          Pragma version>=0.7.0<=0.7.6 (tests/detectors/solc-version/0.7.6/dynamic_2.sol#1) is too complex
  
        ''',
        'elements': list([
          dict({
            'name': '>=0.7.0<=0.7.6',
            'source_mapping': dict({
              'ending_column': 33,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/solc-version/0.7.6/dynamic_2.sol',
              'filename_short': 'tests/detectors/solc-version/0.7.6/dynamic_2.sol',
              'is_dependency': False,
              'length': 32,
              'lines': list([
                1,
              ]),
              'start': 0,
              'starting_column': 1,
            }),
            'type': 'pragma',
            'type_specific_fields': dict({
              'directive': list([
                'solidity',
                '>=',
                '0.7',
                '.0',
                '<=',
                '0.7',
                '.6',
              ]),
            }),
          }),
        ]),
        'first_markdown_element': 'tests/detectors/solc-version/0.7.6/dynamic_2.sol#L1',
        'id': 'd63860d6851dda74b9cb989aa5ef5bbb9bcc22c1b6f217b9356c0fc843b78386',
        'impact': 'Informational',
        'markdown': '''
          Pragma version[>=0.7.0<=0.7.6](tests/detectors/solc-version/0.7.6/dynamic_2.sol#L1) is too complex
  
        ''',
      }),
    ]),
  ])
# ---
# name: test_detector[IncorrectSolc-0.7.6-static.sol]
  list([
    list([
    ]),
  ])
# ---
